--- a/index.html
+++ b/index.html
@@ -22,13 +22,25 @@
         </ul>
     </nav>
     <div class="h-mid w-full bg-white px-20 py-5">
-        <p class="font-semibold text-lg">Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+        <p class="font-semibold text-lg text-blue-400">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
             Dolore libero debitis, aspernatur quaerat iusto quae quis 
             aut odio totam minus sequi illum reiciendis dolores nisi 
             recusandae amet temporibus! Corporis, magnam?
             Dolore libero debitis, aspernatur quaerat iusto quae quis 
             aut odio totam minus sequi illum reiciendis dolores nisi 
-            recusandae amet temporibus! Corporis, magnam?</p>
+            recusandae amet temporibus! Corporis, magnam?
+        </p>
+
+        <p class="font-semibold text-lg text-orange-400">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+            Dolore libero debitis, aspernatur quaerat iusto quae quis 
+            aut odio totam minus sequi illum reiciendis dolores nisi 
+            recusandae amet temporibus! Corporis, magnam?
+            Dolore libero debitis, aspernatur quaerat iusto quae quis 
+            aut odio totam minus sequi illum reiciendis dolores nisi 
+            recusandae amet temporibus! Corporis, magnam?
+        </p>
     </div>
     <small class="bg-black text-white w-full absolute bottom-0 text-center">
         Copyright &copy;2022. Build and deployed by <a class="text-blue-500 underline">sulav@gmail.com</a>
