--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </ul>
     </nav>
     <div class="h-mid w-full bg-white px-20 py-5">
-        <p class="font-semibold text-lg text-blue-400">
+        <p class="font-semibold text-lg text-blue-400 py-5">
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
             Dolore libero debitis, aspernatur quaerat iusto quae quis 
             aut odio totam minus sequi illum reiciendis dolores nisi 
@@ -32,7 +32,7 @@
             recusandae amet temporibus! Corporis, magnam?
         </p>
 
-        <p class="font-semibold text-lg text-orange-400">
+        <p class="font-semibold text-lg text-orange-400 py-5">
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
             Dolore libero debitis, aspernatur quaerat iusto quae quis 
             aut odio totam minus sequi illum reiciendis dolores nisi 
