--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Test</title>
-    <link rel="stylesheet" href="app.css">
+    <link rel="stylesheet" href="final.css">
     <style>
         .h-mid{
             height: 86%;
@@ -22,15 +22,7 @@
         </ul>
     </nav>
     <div class="h-mid w-full bg-white px-20 py-5">
-        <p class="font-semibold text-lg py-5 text-blue-400">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
-            Dolore libero debitis, aspernatur quaerat iusto quae quis 
-            aut odio totam minus sequi illum reiciendis dolores nisi 
-            recusandae amet temporibus! Corporis, magnam?
-            Dolore libero debitis, aspernatur quaerat iusto quae quis 
-            aut odio totam minus sequi illum reiciendis dolores nisi 
-            recusandae amet temporibus! Corporis, magnam?
-        </p>
+    <h1 class="font-bold text-5xl text-right">Did you Know?</h1>
 
         <p class="font-semibold text-lg text-orange-400 py-5">
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
