--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <div class="socials w-1/5 ">
                 <ul class="flex justify-evenly">
                     <li class="hover:text-blue-400 duration-200"><a href="https://github.com/TrainYourFingers"><img src="photos/icons/github-32.png"/></a></li>
-                    <li class="hover:text-blue-400 duration-200"><a href="https://twitter.com/SulovePokhrel"></a><img src="photos/icons/twitter-32.png"/></a></li>
+                    <li class="hover:text-blue-400 duration-200"><a href="https://twitter.com/SulovePokhrel"><img src="photos/icons/twitter-32.png"/></a></li>
                 </ul>
             </div>
         </div>
