--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <div class="h-mid w-full px-20 py-5">
         <h1 class=" font-bold text-8xl font-serif pt-10 text-white">Sulav<br/>Pokhrel</h1>
         <div class="bg-orange-400 w-16 h-4 rounded-md my-3"></div>
-        <p class="font-semibold text-xl text-white font-sans w-1/4 my-3">Creativity is my favourite weapon. It becomes deadlier when I use my common sense as a poison.</p>
+        <p class="font-semibold text-xl text-white font-sans w-1/4 my-3">Professional in HTML, CSS and Tailwind, JavaScript and ReactJS. Good at communication and problem solving.</p>
         <button class="bg-orange-400 px-8 py-4 rounded-md font-semibold text-xl text-white hover:bg-orange-600">Take a tour</button>
     </div>
     <small class="bg-black text-white w-full absolute bottom-0 text-center">
